<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/rg_tab"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/rg_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.linglingyi.com.viewone.FontIconView
                android:id="@+id/tv_main_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/icon_tab_main"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_22"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="首页"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_vip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.linglingyi.com.viewone.FontIconView
                android:id="@+id/tv_vip_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/icon_tab_vip"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_22"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_vip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="升级"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.linglingyi.com.viewone.FontIconView
                android:id="@+id/tv_guide_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/icon_tab_lingzhu"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_22"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="领主"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.linglingyi.com.viewone.FontIconView
                android:id="@+id/tv_share_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/icon_tab_share"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_22"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="分享"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.linglingyi.com.viewone.FontIconView
                android:id="@+id/tv_mine_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/icon_tab_mine"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_22"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="我的"
                android:textColor="@drawable/widget_rb_selector_xdtx"
                android:textSize="@dimen/sp_13" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>